ci: fix release-grpc-proto symlink and add setup-python to upload job
- Remove symlink before mkdir+cp in build job (same fix as pr-test-rust)
- Add actions/setup-python to upload job for consistency

--- a/.github/workflows/release-grpc-proto.yml
+++ b/.github/workflows/release-grpc-proto.yml
@@ -26,8 +26,9 @@ jobs:
       - name: Install build deps
         run: pip install build twine grpcio-tools
 
-      - name: Copy proto files (avoid symlink issues)
+      - name: Copy proto files (replace symlink with real files)
         run: |
+          rm -f grpc_client/python/smg_grpc_proto/proto
           mkdir -p grpc_client/python/smg_grpc_proto/proto
           cp grpc_client/proto/*.proto grpc_client/python/smg_grpc_proto/proto/
 
@@ -52,6 +53,11 @@ jobs:
         with:
           name: grpc-proto-dist
           path: dist
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.12"
 
       - name: Upload to PyPI
         env:
