--- a/multimodal/Cargo.toml
+++ b/multimodal/Cargo.toml
@@ -39,6 +39,11 @@ anyhow = "1.0.100"
 npyz = { version = "0.8", features = ["npz"] }
 tempfile = "3.8"
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
+criterion = "0.5"
+
+[[bench]]
+name = "multimodal_overhead"
+harness = false
 
 [lints]
 workspace = true
