--- a/multimodal/Cargo.toml
+++ b/multimodal/Cargo.toml
@@ -18,7 +18,7 @@ name = "llm_multimodal"
 [dependencies]
 async-trait.workspace = true
 base64 = "0.22"
-bytes = "1.8.0"
+bytes = { version = "1.8.0", features = ["serde"] }
 image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
 ndarray = "0.16"
 once_cell = "1.21.3"
