--- a/multimodal/Cargo.toml
+++ b/multimodal/Cargo.toml
@@ -40,6 +40,8 @@ npyz = { version = "0.8", features = ["npz"] }
 tempfile = "3.8"
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 criterion = "0.5"
+prost = { workspace = true }
+prost-types = { workspace = true }
 
 [[bench]]
 name = "multimodal_overhead"
