--- a/scripts/k8s-runner-resources/arc-runner-autoscaler.yaml
+++ b/scripts/k8s-runner-resources/arc-runner-autoscaler.yaml
@@ -8,8 +8,26 @@ spec:
     kind: RunnerDeployment
     name: arc-runner-gpu-h100
 
-  minReplicas: 10
+  minReplicas: 12
   maxReplicas: 20
+
+  metrics:
+    - type: TotalNumberOfQueuedAndInProgressWorkflowRuns
+      repositoryNames:
+        - lightseekorg/smg
+---
+apiVersion: actions.summerwind.dev/v1alpha1
+kind: HorizontalRunnerAutoscaler
+metadata:
+  name: arc-runner-a10-autoscaler
+  namespace: actions-runner-system
+spec:
+  scaleTargetRef:
+    kind: RunnerDeployment
+    name: arc-runner-gpu-a10
+
+  minReplicas: 2
+  maxReplicas: 4
 
   metrics:
     - type: PercentageRunnersBusy
