--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -1,19 +1,19 @@
 name: PR Test (SMG)
 
 on:
-  # push:
-  #   branches: [ main ]
-  #   paths-ignore:
-  #     - "docs/**"
-  #     - "mkdocs.yml"
-  #     - "*.md"
-  # pull_request:
-  #   branches: [ main ]
-  #   types: [opened, synchronize, reopened, labeled]
-  #   paths-ignore:
-  #     - "docs/**"
-  #     - "mkdocs.yml"
-  #     - "*.md"
+  push:
+    branches: [ main ]
+    paths-ignore:
+      - "docs/**"
+      - "mkdocs.yml"
+      - "*.md"
+  pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened, labeled]
+    paths-ignore:
+      - "docs/**"
+      - "mkdocs.yml"
+      - "*.md"
   workflow_dispatch:
 
 permissions:
