refactor(protocols,gateway): redesign worker type hierarchy and consolidate protocol layer
Overhaul the worker data model to eliminate type duplication, enforce
semantic invariants, and establish a clear protocol/gateway boundary.
The protocols crate is now the single source of truth for all worker
identity and configuration types; the gateway layer only adds
runtime-specific behavior via extension traits and wrapper structs.

Wire format (JSON API) is fully preserved — no breaking API changes.

--- What changed ---

New types in protocols/src/worker.rs:
  - WorkerSpec: renamed from WorkerCoreInfo, absorbs all fields that were
    previously scattered across WorkerCoreInfo, WorkerConfigRequest, and
    WorkerMetadata (url, api_key, worker_type, connection_mode,
    runtime_type, labels, models, health, bootstrap_host, bootstrap_port,
    kv_connector, kv_role, provider, priority, cost, dp_size)
  - WorkerModels: enum with Wildcard/Single(Box<ModelCard>)/Multi(Vec<ModelCard>)
    replacing Vec<ModelCard>. Custom serde serializes as Vec<ModelCard> for
    wire compatibility. Helper methods: primary(), all(), find(), supports(),
    is_wildcard(), iter()
  - HealthCheckConfig: protocol-level health check fields (timeout, interval,
    thresholds, disable flag) separated from gateway-internal endpoint path
  - HealthCheckUpdate: Option<T> fields for proper PATCH semantics on health
    config updates
  - WorkerType/ConnectionMode/RuntimeType/ProviderType: simplified from struct
    variants to unit variants (e.g., Grpc { port } -> Grpc, Prefill {
    bootstrap_port } -> Prefill) with data moved to WorkerSpec fields

Moved to protocols layer:
  - protocols/src/model_card.rs: ModelCard moved from model_gateway/src/core/
  - protocols/src/model_type.rs: ModelType bitflags + Endpoint enum moved from
    model_gateway/src/core/

Deleted types:
  - protocols/src/worker_spec.rs: entire module removed; WorkerConfigRequest,
    CreateWorker, WorkerInfo (old flat-field version), 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ wasmtime = { version = "41.0", features = ["component-model", "async"] }
 wasmtime-wasi = "41.0"
 tokio-util = { version = "0.7", features = ["rt"] }
 scopeguard = "1.2"
+bitflags = "2.10.0"
 
 [workspace.lints.rust]
 unused_qualifications = "warn"
