--- a/model_gateway/Cargo.toml
+++ b/model_gateway/Cargo.toml
@@ -108,7 +108,7 @@ serde_yaml = "0.9"
 openai-harmony = "0.0.8"
 openmetrics-parser = "0.4.4"
 arc-swap = "1.7.1"
-bitflags = "2.10.0"
+bitflags.workspace = true
 once_cell = "1.21.3"
 sha2 = "0.10"
 wasmtime = { workspace = true }
