--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -255,7 +255,9 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           GPU_TYPE: H100
           E2E_MODEL_TP_OVERRIDES: '{"meta-llama/Llama-3.1-8B-Instruct":1,"Qwen/Qwen2.5-7B-Instruct":1,"Qwen/Qwen3-30B-A3B":1}'
+          E2E_LOG_DIR: nightly_gateway_logs
         run: |
+          mkdir -p nightly_gateway_logs
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
 
           K_FILTER="${{ matrix.model.test_class }}"
@@ -362,7 +364,9 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           GPU_TYPE: H200
+          E2E_LOG_DIR: nightly_gateway_logs
         run: |
+          mkdir -p nightly_gateway_logs
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
 
           K_FILTER="${{ matrix.model.test_class }}"
