refactor: remove pub use re-export aliases from model_gateway lib.rs
Remove 5 pub use re-exports that aliased workspace crates through the
model_gateway lib (smg_data_connector as data_connector, smg_grpc_client
as grpc_client, smg_mcp as mcp, smg_mesh as mesh, wfaas as workflow).

All 76 consuming files across model_gateway/src, model_gateway/tests,
and bindings/golang now import the actual crate names directly instead
of going through the lib re-exports. This makes dependency relationships
explicit and removes the indirection layer.

Mapping applied across the codebase:
- crate::data_connector / smg::data_connector → smg_data_connector
- crate::grpc_client / smg::grpc_client → smg_grpc_client
- crate::mcp / smg::mcp → smg_mcp
- crate::mesh / smg::mesh → smg_mesh
- crate::workflow / smg::workflow → wfaas

Also added smg-grpc-client as a direct dependency in bindings/golang
Cargo.toml since it previously relied on the lib re-export.

--- a/bindings/golang/Cargo.toml
+++ b/bindings/golang/Cargo.toml
@@ -24,6 +24,9 @@ async-trait = "0.1"
 path = "../../model_gateway"
 default-features = true
 
+[dependencies.smg-grpc-client]
+workspace = true
+
 [features]
 default = []
 vendored-openssl = ["smg/vendored-openssl"]
