refactor: remove remaining pub use re-export aliases from lib.rs
Remove the last 5 pub use re-exports from model_gateway/src/lib.rs,
completing the work started in #413. All internal modules and external
consumers now import workspace crates directly by their real names
instead of through re-exported aliases.

Aliases removed:
- pub use openai_protocol as protocols → use openai_protocol directly
- pub use smg_auth as auth → use smg_auth directly
- pub use llm_tokenizer as tokenizer → use llm_tokenizer directly
- pub use reasoning_parser → use reasoning_parser directly
- pub use tool_parser → use tool_parser directly

What changed:
- model_gateway/src/lib.rs: removed all 5 pub use re-exports, now only
  contains pub mod declarations
- ~85 source files under model_gateway/src/: replaced crate::protocols::
  with openai_protocol::, crate::auth:: with smg_auth::, crate::tokenizer::
  with llm_tokenizer::, and extracted crate::reasoning_parser/tool_parser
  from grouped use crate::{} blocks into standalone imports
- 14 test files under model_gateway/tests/: replaced smg::protocols:: with
  openai_protocol::, smg::auth:: with smg_auth::, smg::tokenizer:: with
  llm_tokenizer::
- 4 bench files under model_gateway/benches/: same replacements
- bindings/golang/: added openai-protocol, llm-tokenizer, tool-parser as
  direct Cargo.toml deps; updated 8 source files to use direct imports
- bindings/python/: added smg-auth and tool-parser as direct Cargo.toml
  deps; added use smg_auth as auth for backward compat with existing code

Why:
- Eliminates hidden dependency aliases that obscure the real crate graph
- Makes it immediately clear which workspace crate each import comes from
- Prevents accidental coupling through the gateway's lib.rs facade
- Follows the same pattern established in #413 for the first 5 re-exports

Refs: #413

--- a/bindings/golang/Cargo.toml
+++ b/bindings/golang/Cargo.toml
@@ -24,6 +24,15 @@ async-trait = "0.1"
 path = "../../model_gateway"
 default-features = true
 
+[dependencies.openai-protocol]
+workspace = true
+
+[dependencies.llm-tokenizer]
+path = "../../tokenizer"
+
+[dependencies.tool-parser]
+path = "../../tool_parser"
+
 [dependencies.smg-grpc-client]
 workspace = true
 
