Revert concurrency group for nightly benchmark

--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -15,7 +15,7 @@ on:
         default: 'all'
 
 concurrency:
-  group: nightly-benchmark-temp-2
+  group: nightly-benchmark
   cancel-in-progress: false
 
 permissions:
