--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -30,10 +30,13 @@ jobs:
             ls: dir
             target: x86_64
             python-architecture: x64
-            interpreter: 3.9 3.10 3.11 3.12 3.13
+            interpreter: 3.13
+          - os: macos
+            target: x86_64
+            interpreter: 3.13
           - os: macos
             target: aarch64
-            interpreter: 3.9 3.10 3.11 3.12 3.13
+            interpreter: 3.13
           - os: ubuntu
             platform: linux
             target: aarch64
