--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,14 @@ repos:
         types: [rust]
         pass_filenames: false
 
+      - id: dco-check
+        name: DCO sign-off check
+        description: Check that the commit message contains a DCO sign-off
+        entry: bash -c 'grep -q "^Signed-off-by: .* <.*>" "$1"' --
+        language: system
+        stages: [commit-msg]
+        always_run: true
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.15.0
     hooks:
