--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -38,7 +38,14 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      - name: Get PR commits
+        id: get-commits
+        uses: tim-actions/get-pr-commits@master
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: tim-actions/dco@master
+        with:
+          commits: ${{ steps.get-commits.outputs.commits }}
 
   check-ci:
     runs-on: k8s-runner-cpu
