fix(ci): anchor DCO sign-off regex to end of line
Add $ anchor to prevent matching lines with trailing text after
the email address in the Signed-off-by line.

Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,7 +64,7 @@ repos:
       - id: dco-check
         name: DCO sign-off check
         description: Check that the commit message contains a DCO sign-off
-        entry: bash -c 'grep -q "^Signed-off-by: .* <.*>" "$1"' --
+        entry: bash -c 'grep -q "^Signed-off-by: .* <.*>$" "$1"' --
         language: system
         stages: [commit-msg]
         always_run: true
