fix(ci): address review feedback from CodeRabbit
- Pin tim-actions/get-pr-commits to v1.3.1 and tim-actions/dco to v1.1.0
  instead of @master for security and reproducibility
- Use YAML block scalar for branch-name-check entry to avoid parsing issues
- Remove auto-close action from branch naming Mergify rule to avoid
  frustrating contributors; keep comment + failing check instead

Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,7 +55,14 @@ repos:
       - id: branch-name-check
         name: Branch naming convention
         description: Ensure branch name follows <type>/<desc> or <username>/<desc> format
-        entry: bash -c 'branch=$(git rev-parse --abbrev-ref HEAD); [[ "$branch" == "main" || "$branch" =~ ^[a-z0-9]([a-z0-9._-]*[a-z0-9])?/[a-z0-9._-]+$ ]] || { echo "Branch \"$branch\" does not follow naming convention: <type>/<description> or <username>/<description>"; exit 1; }'
+        entry: |
+          bash -c '
+            branch=$(git rev-parse --abbrev-ref HEAD)
+            if [[ "$branch" != "main" && ! "$branch" =~ ^[a-z0-9]([a-z0-9._-]*[a-z0-9])?/[a-z0-9._-]+$ ]]; then
+              echo "Branch \"$branch\" does not follow naming convention: <type>/<description> or <username>/<description>"
+              exit 1
+            fi
+          '
         language: system
         stages: [pre-push]
         always_run: true
