fix(ci): only evaluate needs-rebase removal when label is present
Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -73,6 +73,7 @@ pull_request_rules:
     conditions:
       - -conflict
       - -closed
+      - label = needs-rebase
     actions:
       label:
         remove:
