fix(ci): use correct Mergify syntax for negated regex condition
The `~!=` operator is not valid in Mergify. Use `-head~=` prefix
syntax to negate the regex match for branch naming enforcement.

Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
   - name: Enforce branch naming convention
     description: Branch must follow <type>/<description> or <username>/<description> format
     conditions:
-      - head ~!= ^[a-z0-9]([a-z0-9._-]*[a-z0-9])?/[a-z0-9._-]+$
+      - -head~=^[a-z0-9]([a-z0-9._-]*[a-z0-9])?/[a-z0-9._-]+$
       - head != main
     actions:
       comment:
