--- a/model_gateway/Cargo.toml
+++ b/model_gateway/Cargo.toml
@@ -134,6 +134,9 @@ jsonwebtoken = "9.3"
 validator = "0.20.0"
 base64 = "0.22"
 kv-index.workspace = true
+wasmtime-wasi = { workspace = true }
+lru = { workspace = true }
+wat = "1.244"
 
 [[bench]]
 name = "wasm_middleware_latency"
@@ -168,6 +171,11 @@ path = "benches/manual_policy_benchmark.rs"
 name = "radix_tree_benchmark"
 harness = false
 path = "benches/radix_tree_benchmark.rs"
+
+[[bench]]
+name = "wasm_instantiation"
+harness = false
+path = "benches/wasm_instantiation.rs"
 
 [lints]
 workspace = true
