--- a/model_gateway/Cargo.toml
+++ b/model_gateway/Cargo.toml
@@ -173,6 +173,11 @@ harness = false
 path = "benches/radix_tree_benchmark.rs"
 
 [[bench]]
+name = "mesh_sync_benchmark"
+harness = false
+path = "benches/mesh_sync_benchmark.rs"
+
+[[bench]]
 name = "wasm_instantiation"
 harness = false
 path = "benches/wasm_instantiation.rs"
