fix(ci): match probot DCO app check name in Mergify rule
The probot DCO app reports its check as "DCO" (uppercase), but the
Mergify condition used "dco" (lowercase). Mergify's check-failure
condition is case-sensitive for check names, so the rule never fired.

Verified by opening a test PR (#485) with an unsigned commit: the DCO
check completed with conclusion action_required, but Mergify's Summary
showed check-failure = dco as unmatched.

Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -34,7 +34,7 @@ pull_request_rules:
   - name: Comment on DCO check failure
     description: Post fix instructions when DCO sign-off is missing
     conditions:
-      - check-failure = dco
+      - check-failure = DCO
       - -closed
       - -draft
     actions:
