--- a/model_gateway/Cargo.toml
+++ b/model_gateway/Cargo.toml
@@ -112,6 +112,8 @@ arc-swap = "1.7.1"
 bitflags.workspace = true
 once_cell = "1.21.3"
 sha2 = "0.10"
+base64 = "0.22"
+image = { version = "0.25.4", default-features = false }
 wasmtime = { workspace = true }
 
 [build-dependencies]
@@ -132,7 +134,6 @@ serial_test = "3.0"
 rsa = { version = "0.9", features = ["sha2"] }
 jsonwebtoken = "9.3"
 validator = "0.20.0"
-base64 = "0.22"
 kv-index.workspace = true
 wasmtime-wasi = { workspace = true }
 lru = { workspace = true }
