fix(pre-commit): exclude Rust files from shebang check
Rust inner attributes (`#![...]`) start with `#!` which the
check-shebang-scripts-are-executable hook misidentifies as a shebang,
causing false failures on benchmark files.

Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
+        exclude: \.rs$
       - id: detect-private-key
         exclude: .*tests/.*_test\.rs$
       - id: mixed-line-ending
