lint: add clippy::absolute_paths and single_component_path_imports lints
Enable two new Clippy lints to improve import hygiene:
- absolute_paths (warn): flags inline paths with 4+ segments, encouraging
  use imports over deeply nested paths in function bodies
- single_component_path_imports (warn): flags unnecessary single-component
  use statements like `use regex;`

Configure absolute-paths-max-segments = 3 in clippy.toml and fix all
existing violations across 43 files by adding proper use imports.
Suppress the lint in generated protobuf code modules.

Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,6 +104,10 @@ ignored_unit_patterns = "warn"
 ref_option = "warn"
 large_futures = "warn"
 
+# Import hygiene
+single_component_path_imports = "warn"
+absolute_paths = "warn"
+
 # These pedantic lints are explicitly allowed to give authors discretion
 default_trait_access = "allow"
 match_same_arms = "allow"
