fix(ci): auto-trigger benchmark workflows on code changes
Benchmark workflows were never executing on PRs because the benchmark
job required the `router-benchmark` label in addition to path filters.
This meant even when relevant source code changed, benchmarks were
silently skipped unless someone manually added the label.

- Remove `router-benchmark` label gate from all 5 benchmark workflows
  (manual-policy, radix-tree, request-processing, tokenizer, tool-parser)
- Fix stale path in radix-tree benchmark: `model_gateway/src/policies/tree.rs`
  no longer exists, replaced with `kv_index/**` which is the actual crate
- Add test file exclusions to all benchmark path filters so unit test
  changes don't trigger unnecessary benchmark runs (tests/**, *_test.rs,
  test_*.rs)

Benchmarks now auto-run when source code changes, gated only by
check-ci (trusted contributor check) and path filters.

Signed-off-by: Simo Lin <linsimo.mark@gmail.com>

--- a/.github/workflows/benchmark-manual-policy.yml
+++ b/.github/workflows/benchmark-manual-policy.yml
@@ -6,11 +6,17 @@ on:
     paths:
       - 'model_gateway/benches/manual_policy_benchmark.rs'
       - 'model_gateway/src/policies/**'
+      - '!model_gateway/src/policies/**/tests/**'
+      - '!model_gateway/src/policies/**/*_test.rs'
+      - '!model_gateway/src/policies/**/test_*.rs'
   pull_request:
     branches: [ main ]
     paths:
       - 'model_gateway/benches/manual_policy_benchmark.rs'
       - 'model_gateway/src/policies/**'
+      - '!model_gateway/src/policies/**/tests/**'
+      - '!model_gateway/src/policies/**/*_test.rs'
+      - '!model_gateway/src/policies/**/test_*.rs'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'
@@ -43,9 +49,7 @@ jobs:
     needs: check-ci
     if: |
       github.repository == 'lightseekorg/smg' &&
-      needs.check-ci.outputs.should_run == 'true' &&
-      (github.event_name != 'pull_request' ||
-       contains(github.event.pull_request.labels.*.name, 'router-benchmark'))
+      needs.check-ci.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
