--- a/.github/workflows/benchmark-tool-parser.yml
+++ b/.github/workflows/benchmark-tool-parser.yml
@@ -6,11 +6,17 @@ on:
     paths:
       - 'model_gateway/benches/tool_parser_benchmark.rs'
       - 'tool_parser/**'
+      - '!tool_parser/**/tests/**'
+      - '!tool_parser/**/*_test.rs'
+      - '!tool_parser/**/test_*.rs'
   pull_request:
     branches: [ main ]
     paths:
       - 'model_gateway/benches/tool_parser_benchmark.rs'
       - 'tool_parser/**'
+      - '!tool_parser/**/tests/**'
+      - '!tool_parser/**/*_test.rs'
+      - '!tool_parser/**/test_*.rs'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'
@@ -43,9 +49,7 @@ jobs:
     needs: check-ci
     if: |
       github.repository == 'lightseekorg/smg' &&
-      needs.check-ci.outputs.should_run == 'true' &&
-      (github.event_name != 'pull_request' ||
-       contains(github.event.pull_request.labels.*.name, 'router-benchmark'))
+      needs.check-ci.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
