--- a/scripts/k8s-runner-resources/arc-runner-cpu.yaml
+++ b/scripts/k8s-runner-resources/arc-runner-cpu.yaml
@@ -7,6 +7,7 @@ spec:
   replicas: 4
   template:
     spec:
+      ephemeral: true
       repository: lightseekorg/smg
       labels:
         - k8s-runner-cpu
