--- a/scripts/k8s-runner-resources/arc-runner-gpu.yaml
+++ b/scripts/k8s-runner-resources/arc-runner-gpu.yaml
@@ -7,6 +7,7 @@ spec:
   replicas: 10
   template:
     spec:
+      ephemeral: true
       repository: lightseekorg/smg
       labels:
         - 4-gpu-h100
@@ -87,6 +88,7 @@ spec:
   replicas: 2
   template:
     spec:
+      ephemeral: true
       repository: lightseekorg/smg
       labels:
         - 4-gpu-a10
