refactor(tokenizer): comprehensive code quality improvements
- Rename Encoding::Sp to Encoding::Plain (no longer SentencePiece-specific)
- Remove deprecated token_ids_ref() method (deprecated since v0.1.0)
- Remove dead_code fields: TiktokenTokenizer.model, CachedTokenizer.config
- Cache minijinja::Environment in ChatTemplateState for per-request perf
- Upgrade L0 cache eviction from arbitrary to approximate LRU
- Tighten is_likely_openai_model() patterns to avoid false positives
- Fix README: ChatTemplateParams example, test command, source map, L0 desc
- Strengthen stream.rs tests with real assertions (was assert is_some||is_none)
- Add L1 cache concurrent access test
- Add stop sequence multi-token spanning test

All 96 unit tests + 61 integration tests pass. Zero clippy warnings.

Signed-off-by: Simo Lin <linsimo.mark@gmail.com>

--- a/tokenizer/Cargo.toml
+++ b/tokenizer/Cargo.toml
@@ -31,7 +31,7 @@ aho-corasick = "1.1"
 base64 = "0.22"
 rustc-hash = "1.1"
 hf-hub = { version = "0.4.3", features = ["tokio"] }
-minijinja = { version = "2.0", features = ["unstable_machinery", "json", "builtins"] }
+minijinja = { version = "2.0", features = ["unstable_machinery", "json", "builtins", "loader"] }
 minijinja-contrib = { version = "2.0", features = ["pycompat"] }
 rayon = "1.10"
 tiktoken-rs = "0.9.1"
