ci(docker): use H200 runner for builds and add nightly GHCR workflow
- release-docker.yml: switch runs-on from ubuntu-latest to 8-gpu-h200
  for significantly faster Docker builds using the H200 runner's many
  cores, which is otherwise idle outside the nightly benchmark window

- nightly-docker.yml: new workflow that builds the Docker image daily
  at 06:00 UTC (2h before nightly benchmarks at 08:00 UTC to avoid
  runner contention) and pushes to GitHub Container Registry at
  ghcr.io/lightseekorg/smg:nightly — single tag that gets overwritten
  each run to avoid storage accumulation. Uses QEMU + buildx for
  multi-platform support (linux/amd64, linux/arm64), GHA build cache,
  and concurrency group to prevent overlapping runs. Guarded by
  repository check so forks don't trigger builds.

Signed-off-by: Simon Lin <simon@simonlin.com>
Signed-off-by: Simo Lin <linsimo.mark@gmail.com>

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -21,7 +21,7 @@ jobs:
   build-and-push:
     name: Build and push Docker image
     if: github.repository == 'lightseekorg/smg'
-    runs-on: ubuntu-latest
+    runs-on: ["8-gpu-h200"]
     permissions:
       contents: read
     steps:
